[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
sqlx-cli = "0.8.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "limit", "trace"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
